--- a/src/EmployeeList/server/appsettings.Development.json
+++ b/src/EmployeeList/server/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EmployeeList;Integrated Security=True;Connect Timeout=30;"
   }
 }
