Ordered depedencies and delcared jQuery

--- a/src/EmployeeList/ngcleint/angular.json
+++ b/src/EmployeeList/ngcleint/angular.json
@@ -87,11 +87,10 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/popper.js/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/jqueryui/jquery-ui.min.js",
-              "node_modules/jqueryui/jquery-ui.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jqueryui/jquery-ui.min.js",
+              "./node_modules/jqueryui/jquery-ui.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           }
         },
