--- a/src/EmployeeList/ngcleint/tsconfig.app.json
+++ b/src/EmployeeList/ngcleint/tsconfig.app.json
@@ -4,8 +4,8 @@
     "outDir": "./out-tsc/app",
     "types": [
       "jquery",
-      "bootstrap",
-      "jqueryui"
+      "jqueryui",
+      "bootstrap"
     ]
   },
   "include": [
