--- a/src/EmployeeList/ngcleint/angular.json
+++ b/src/EmployeeList/ngcleint/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../server/wwwroot/dist",
+            "outputPath": "../server/wwwroot",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
