changed name and version

--- a/src/EmployeeManager/client/package.json
+++ b/src/EmployeeManager/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngcleint",
-  "version": "0.0.0",
+  "name": "client",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
